:bug: corrigido bug de espaco adicional na scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ a {
   display: disabled;
 }
 
+::-webkit-scrollbar-track {
+  background-color: rgba(17, 17, 17, 0.952);
+}
+
 ::-webkit-scrollbar-thumb {
   background-color: var(--primary);
   border-radius: 20px;
